# fastImageRead

./: .gitmodules  CMakeLists.txt  README.md  diffimage.c++  diffimage.h  main.c++  pyproject.toml  setup.py  test.py
imreadfast/: CMakeLists.txt  __init__.py  _imreadfast.pyx
include/: imagesread.h
src/: CMakeLists.txt  diffcuda.cu  diffcuda.h  imagesread.c++  imagesread.h
test/: test.py
